# factory_variadic_templates

./: CMakeLists.txt  README.md
src/: factory.cpp
